[gd_scene load_steps=2 format=3 uid="uid://8132ep0plr22"]

[ext_resource type="Script" path="res://MainScene/StartScene/start_scene.gd" id="1_sxiqw"]

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxiqw")

[node name="TitleScene" type="TabContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -85.5
offset_right = 52.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false

[node name="DefaultPage" type="VBoxContainer" parent="TitleScene"]
layout_mode = 2

[node name="SinglePlay" type="Button" parent="TitleScene/DefaultPage"]
layout_mode = 2
text = "<SinglePlay>"

[node name="MultiPlay" type="Button" parent="TitleScene/DefaultPage"]
layout_mode = 2
text = "<MultiPlay>"

[node name="Setting" type="Button" parent="TitleScene/DefaultPage"]
layout_mode = 2
text = "<Setting>"

[node name="Language" type="Button" parent="TitleScene/DefaultPage"]
layout_mode = 2
text = "<Language>"

[node name="Quit" type="Button" parent="TitleScene/DefaultPage"]
layout_mode = 2
text = "<Quit>"

[node name="MultiPage" type="VBoxContainer" parent="TitleScene"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="TitleScene/MultiPage"]
layout_mode = 2
text = "<MultiPlay>"
horizontal_alignment = 1

[node name="HostGame" type="Button" parent="TitleScene/MultiPage"]
layout_mode = 2
text = "<HostGame>"

[node name="JoinGame" type="Button" parent="TitleScene/MultiPage"]
layout_mode = 2
text = "<JoinGame>"

[node name="Back" type="Button" parent="TitleScene/MultiPage"]
layout_mode = 2
text = "<Back>"

[node name="LanguagePage" type="VBoxContainer" parent="TitleScene"]
visible = false
layout_mode = 2

[node name="English" type="Button" parent="TitleScene/LanguagePage"]
layout_mode = 2
auto_translate = false
text = "English"

[node name="Chinese" type="Button" parent="TitleScene/LanguagePage"]
layout_mode = 2
auto_translate = false
text = "中文"

[node name="Back" type="Button" parent="TitleScene/LanguagePage"]
layout_mode = 2
text = "<Back>"

[node name="MultiPage_Host" type="VBoxContainer" parent="TitleScene"]
visible = false
layout_mode = 2

[node name="Port" type="Label" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "<Port>"
horizontal_alignment = 1

[node name="PortText" type="LineEdit" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "12766"
placeholder_text = "<Port>"
alignment = 1

[node name="MaxClient" type="Label" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "<MaxClient>"
horizontal_alignment = 1

[node name="MaxClientText" type="LineEdit" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "10"
placeholder_text = "<MaxCilent>"
alignment = 1

[node name="Create" type="Button" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "<Create>"

[node name="BackToMulti" type="Button" parent="TitleScene/MultiPage_Host"]
layout_mode = 2
text = "<Back>"

[node name="MultiPage_Join" type="VBoxContainer" parent="TitleScene"]
visible = false
layout_mode = 2

[node name="IP" type="Label" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
text = "<IP>"
horizontal_alignment = 1

[node name="IPText" type="LineEdit" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
placeholder_text = "XXX.XXX.XXX.XXX"
alignment = 1

[node name="Port" type="Label" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
text = "<Port>"
horizontal_alignment = 1

[node name="PortText" type="LineEdit" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
text = "12766"
placeholder_text = "<Port>"
alignment = 1

[node name="Join" type="Button" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
text = "<Join>"

[node name="BackToMulti" type="Button" parent="TitleScene/MultiPage_Join"]
layout_mode = 2
text = "<Back>"

[connection signal="pressed" from="TitleScene/DefaultPage/SinglePlay" to="." method="_on_single_play_pressed"]
[connection signal="pressed" from="TitleScene/DefaultPage/MultiPlay" to="." method="_on_multi_play_pressed"]
[connection signal="pressed" from="TitleScene/DefaultPage/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="TitleScene/DefaultPage/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="TitleScene/DefaultPage/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TitleScene/LanguagePage/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="TitleScene/LanguagePage/Chinese" to="." method="_on_chinese_pressed"]
[connection signal="pressed" from="TitleScene/LanguagePage/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage_Host/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage_Host/BackToMulti" to="." method="_on_back_to_multi_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage_Join/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="TitleScene/MultiPage_Join/BackToMulti" to="." method="_on_back_to_multi_pressed"]
